# percolation_mpi

cw2/: .gitignore  README.md  run-cpu-1.sh  run-cpu-2.sh  run-cpu-4.sh  run-cpu-8.sh  run-gpu-1.sh  run-gpu-4.sh  run-gpu-8.sh
cw2/src/: CMakeLists.txt  build.sh  decomp.cpp  decomp.h  perc_cpu.cpp  perc_cpu.h  perc_gpu.cpp  perc_gpu.h  run_gpu.sh  test.cpp  util.cpp  util.h
